--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-Hello World
+---
+layout: default
+---
+<h1 class="title"><span class="no-wrap">Ducks0ci3ty<!-- -&nbsp;</span><span class="no-wrap">CTF team</span>-->
+</h1>
+<p class="main-description center">Ducks0ci3ty is a team composed by hacking enthusiasts that actively participate on CTF challenges.
+    Take a look at what we have made and what we are
+    planning to do. Choose your way and start exploring our website.</p>
+<div class="options-container">
+    <div class="option">
+        <h3 class="option-title">Game Development</h3>
+        <div class="image-text">
+            <img class="option-image" src="/assets/images/softwaredev.png" alt="Game Development">
+            <p class="option-text">Take a look at our stuff and become an expert in Game Development! Learn to
+                use Unity and make your hobby profitable.
+                <a href="/tutorials/#gamedev" class="option-link">Tutorials</a>
+                <a href="/discover/#games" class="option-link">Our Games</a>
+            </p>
+        </div>
+    </div>
+    <div class="option">
+        <h3 class="option-title">CTFs Score</h3>
+        <div class="image-text">
+            <img class="option-image" src="/assets/images/ctf.png" alt="Software Development">
+            <p class="option-text">Keep track of our team's score and progress on the many CTFs we participated.
+                Apart from our page in CTFtime, we also have our own database that stores all the points achieved in CTFs.
+                <a href="https://ctftime.org/team/114402" target="_blank" class="option-link">CTFtime Page</a>
+                <a href="/discover/#apps" class="option-link">Our Progress</a>
+            </p>
+        </div>
+    </div>
+    <div class="option">
+        <h3 class="option-title">Web Development</h3>
+        <div class="image-text">
+            <img class="option-image" src="/assets/images/webdev.png" alt="Web Development">
+            <p class="option-text">Are you wondering how to develop your own web page? Enroll our tutorials and
+                start earning today! We provide the best tips to make your website the best.
+                <a href="/tutorials/#webdev" class="option-link">Tutorials</a>
+                <a href="/discover/#sites" class="option-link">Our Sites</a>
+            </p>
+        </div>
+    </div>
+</div>
