--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Main Page
 ---
 <h1 class="title"><span class="no-wrap">Ducks0ci3ty<!-- -&nbsp;</span><span class="no-wrap">CTF team</span>-->
 </h1>
