--- a/members.html
+++ b/members.html
@@ -1,16 +1,18 @@
 ---
 layout: default
 permalink: /members
+title: Members
 ---
 <h1 class="title">Members</h1>
 <p class="main-description center">Here are listed our team members:</p>
 <div class="articles-container">
-    <a href="https://et3rnos.github.io" class="article">
-        <img class="member-image" align="left" src="/assets/images/me.png">
+    {% for author in site.authors %}
+    <a href="{{author.blog-path}}" class="article">
+        <img class="member-image" align="left" src="{{author.image-path}}">
         <div class="article-content">
-            <h3 class="article-title">Et3rnos</h3>
-            <p class="article-text">An enthusiastic hacker and programmer. Also the creator of this website.</p>
-            <p class="article-text">Click to go to his blog.</p>
+            <h3 class="article-title">{{author.nickname}}</h3>
+            <p class="article-text">{{author.content}}</p>
         </div>
     </a>
+    {% endfor %}
 </div>
