--- a/index.html
+++ b/index.html
@@ -9,35 +9,36 @@ title: Main Page
     planning to do. Choose your way and start exploring our website.</p>
 <div class="options-container">
     <div class="option">
-        <h3 class="option-title">Game Development</h3>
+        <h3 class="option-title">HackTheBox Team</h3>
         <div class="image-text">
-            <img class="option-image" src="/assets/images/softwaredev.png" alt="Game Development">
-            <p class="option-text">Take a look at our stuff and become an expert in Game Development! Learn to
-                use Unity and make your hobby profitable.
-                <a href="/tutorials/#gamedev" class="option-link">Tutorials</a>
-                <a href="/discover/#games" class="option-link">Our Games</a>
+            <img class="option-image" src="/assets/images/hackthebox.png" alt="HackTheBox">
+            <p class="option-text">Want to be a member of our HackTheBox Team?<br>
+                Send us a message to ducks0ci3ty@protonmail.com!
+                <br>
+                <br>
+                <img src="https://www.hackthebox.eu/badge/team/image/2445" alt="Hack The Box">
+                <a href="mailto:ducks0ci3ty@protonmail.com" target="_blank" class="option-link">Send Message</a>
             </p>
         </div>
     </div>
     <div class="option">
-        <h3 class="option-title">CTFs Score</h3>
+        <h3 class="option-title">CTF Team</h3>
         <div class="image-text">
-            <img class="option-image" src="/assets/images/ctf.png" alt="Software Development">
+            <img class="option-image" src="/assets/images/ctf.png" alt="CTF">
             <p class="option-text">Keep track of our team's score and progress on the many CTFs we participated.
-                Apart from our page in CTFtime, we also have our own database that stores all the points achieved in CTFs.
+                Visit our CTFTime page to discover what CTFs we are planning to participate.
                 <a href="https://ctftime.org/team/114402" target="_blank" class="option-link">CTFtime Page</a>
-                <a href="/discover/#apps" class="option-link">Our Progress</a>
+                <a href="https://et3rnos.github.io/other/ducks0ci3ty-ctf-team-test.html" target="_blank" class="option-link">Appliance Test</a>
             </p>
         </div>
     </div>
     <div class="option">
-        <h3 class="option-title">Web Development</h3>
+        <h3 class="option-title">Discord Server</h3>
         <div class="image-text">
-            <img class="option-image" src="/assets/images/webdev.png" alt="Web Development">
-            <p class="option-text">Are you wondering how to develop your own web page? Enroll our tutorials and
-                start earning today! We provide the best tips to make your website the best.
-                <a href="/tutorials/#webdev" class="option-link">Tutorials</a>
-                <a href="/discover/#sites" class="option-link">Our Sites</a>
+            <img class="option-image" src="/assets/images/discord.png" alt="Discord">
+            <p class="option-text">Want to be part of our Discord Server?<br>
+                Send us a message to ducks0ci3ty@protonmail.com!
+                <a href="mailto:ducks0ci3ty@protonmail.com" target="_blank" class="option-link">Send Message</a>
             </p>
         </div>
     </div>
