--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Main Page
 ---
-<h1 class="title"><span class="no-wrap">Ducks0ci3ty<!-- -&nbsp;</span><span class="no-wrap">CTF team</span>-->
+<h1 class="title"><span class="no-wrap">Ducks0ci3ty<!-- -&nbsp;</span><span class="no-wrap">CTF team--></span>
 </h1>
 <p class="main-description center">Ducks0ci3ty is a team composed by hacking enthusiasts that actively participate on CTF challenges.
     Take a look at what we have made and what we are
